[gd_scene load_steps=14 format=2]

[ext_resource path="res://dodge_assets/art/gunner1.png" type="Texture" id=1]
[ext_resource path="res://dodge_assets/art/Gunner_Red_Jump.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 47, 48 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 47, 0, 47, 48 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 94, 0, 47, 48 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 141, 0, 47, 48 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 188, 0, 47, 48 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 235, 0, 47, 48 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.763
height = 10.9046

[node name="Player" type="Area2D"]
position = Vector2( 236, 155 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4.21633, 4.74046 )
scale = Vector2( 1.22484, 1.13581 )
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 3 )
scale = Vector2( 0.835172, 0.855265 )
shape = SubResource( 2 )

[node name="right_shot" type="Position2D" parent="."]
position = Vector2( 27, 0 )

[node name="left_shot" type="Position2D" parent="."]
position = Vector2( -21, -1 )

[node name="FireDelayTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
